<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textDescricao">


        <ImageView
            android:id="@+id/imagePerfil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_notifications_black_24dp"
            android:contentDescription="@string/image_perfil_description"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/nome_casa_construcao"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#333333"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagePerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/descricao_empresa"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/containerPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/textHorario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/horario_funcionamento"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/textDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textFrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/frete_incluso"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/textHorario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/email_empresa"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/textFrete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/textWhatsApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/whatsapp_contato"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/textFormaPagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/forma_pagamento"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@+id/textWhatsApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/btnEnviarOrcamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar_orcamento"
        android:textSize="16sp"
        android:drawableLeft="@drawable/description_24px"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/textFormaPagamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
