<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rn.tuaobraparacliente.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_cadastroDemandaFragment"
            app:destination="@id/cadastroDemandaFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_casa"
        android:name="com.rn.tuaobraparacliente.ui.casa.CasaFragment"
        android:label="@string/title_casa"
        tools:layout="@layout/fragment_casa" >
    </fragment>

    <fragment
        android:id="@+id/navigation_pefil"
        android:name="com.rn.tuaobraparacliente.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/cadastroDemandaFragment"
        android:name="com.rn.tuaobraparacliente.ui.home.CadastroDemandaFragment"
        android:label="Cadastro de Demanda"
        tools:layout="@layout/fragment_cadastro_demanda"
        >
        <action
            android:id="@+id/action_cadastroDemandaFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>